--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p>&copy; 20224 Free Image. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <styles src="styles.css"></script>
 </body>
 </html>
+
