--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <p>&copy; 20224 Free Image. All rights reserved.</p>
     </footer>
 
-    <styles src="styles.css"></script>
+    <styles src="styles.css"></styles>
 </body>
 </html>
+
 
