--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <p>&copy; 20224 Free Image. All rights reserved.</p>
     </footer>
 
-    <styles src="styles.css"></styles>
+    <scipts src="scripts.jss"></scripts>
 </body>
 </html>
+
 
 
